# orbital-speedtest

./: README.md  pyproject.toml
src/orbital_speedtest/: __main__.py  app.py
tests/: test_app.py
